--- a/gps_serial/nbproject/project.properties
+++ b/gps_serial/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/gps_serial.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jssc-2.8.0.jar=../dependencia/jssc-2.8.0.jar
 file.reference.pi4j-core.jar=../dependencia/pi4j-core.jar
 file.reference.RXTXcomm.jar=mfz-rxtx-2.2-20081207-win-x64/RXTXcomm.jar
 file.reference.usb4java-1.3.0.jar=usb4java-1.3.0/lib/usb4java-1.3.0.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.RXTXcomm.jar}:\
     ${file.reference.usb4java-1.3.0.jar}:\
-    ${file.reference.pi4j-core.jar}
+    ${file.reference.pi4j-core.jar}:\
+    ${file.reference.jssc-2.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
