--- a/gps_serial/nbproject/project.properties
+++ b/gps_serial/nbproject/project.properties
@@ -35,7 +35,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.pi4j-core.jar}:\
-    ${file.reference.jssc-2.8.0.jar}
+    ${file.reference.jssc-2.8.0.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
