--- a/gps_rpi_oceanec/nbproject/project.properties
+++ b/gps_rpi_oceanec/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/gps_rpi_oceanec.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.MapsJava.jar=../dependencia/MapsJava.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.MapsJava.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
