cambios en gps serial

--- a/gps_rpi_oceanec/nbproject/project.properties
+++ b/gps_rpi_oceanec/nbproject/project.properties
@@ -29,12 +29,16 @@ dist.jar=${dist.dir}/gps_rpi_oceanec.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.MapsJava.jar=../dependencia/MapsJava.jar
+file.reference.jxbrowser-7.1.jar=../dependencia/jxbrowser/jxbrowser-7.1.jar
+file.reference.jxbrowser-javafx-7.1.jar=../dependencia/jxbrowser/jxbrowser-javafx-7.1.jar
+file.reference.jxbrowser-swing-7.1.jar=../dependencia/jxbrowser/jxbrowser-swing-7.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.MapsJava.jar}
+    ${file.reference.jxbrowser-swing-7.1.jar}:\
+    ${file.reference.jxbrowser-7.1.jar}:\
+    ${file.reference.jxbrowser-javafx-7.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
